force-app/main/default/objects/Lead/fields/Bokun_Extranet_Link__c.field-meta.xml
<CustomField>
    <fullName>Bokun_Extranet_Link__c</fullName>
    <description>Link to extranet profile of company when a Bokun ID is provided</description>
    <formula>IF(isnumber(Bokun_ID__c), &quot;https://extranet.bokun.io/admin/vendors/&quot; &amp;  Bokun_ID__c,&quot;&quot;)</formula>
    <label>Bokun Extranet Link</label>
    <type>Text</type>
</CustomField>