force-app/main/default/objects/Lead/fields/Bokun_ID__c.field-meta.xml
<CustomField>
    <fullName>Bokun_ID__c</fullName>
    <description>Numeric Bokun ID of the Company</description>
    <externalId>true</externalId>
    <label>Bokun ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>