force-app/main/default/objects/Lead/fields/Bokun_Lead__c.field-meta.xml
<CustomField>
    <fullName>Bokun_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bokun Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>