force-app/main/default/objects/Lead/fields/Company_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Created_Date__c</fullName>
    <description>Date the Bokun ID was created on Bokun Platform</description>
    <label>Company Created Date</label>
    <type>Date</type>
</CustomField>