force-app/main/default/objects/Lead/fields/Days_Since_Last_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Outreach__c</fullName>
    <formula>TODAY() - IF(ISBLANK(Last_Outreach__c),TODAY(),Last_Outreach__c)</formula>
    <label>Days Since Last Outreach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>