force-app/main/default/objects/Lead/fields/Estimated_Bokun_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bokun_Value__c</fullName>
    <description>Estimated Revenue value for Bokun</description>
    <label>Estimated Bokun Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>