force-app/main/default/objects/Lead/fields/Estimated_Booking_Count__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Booking_Count__c</fullName>
    <description>Estimated or Quoted Booking Count over the past 365 days as provided by the Supplier</description>
    <label>Estimated Booking Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>