force-app/main/default/objects/Lead/fields/Estimated_GBV__c.field-meta.xml
<CustomField>
    <fullName>Estimated_GBV__c</fullName>
    <description>Estimated or Quoted Gross Booking Value provided by the Supplier</description>
    <label>Estimated GBV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>