force-app/main/default/objects/Lead/fields/Import_Contact__c.field-meta.xml
<CustomField>
    <fullName>Import_Contact__c</fullName>
    <description>Optional field if a contact name is included in the imported lead</description>
    <inlineHelpText>Optional field if a contact name is included in the imported lead</inlineHelpText>
    <label>Import Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>