force-app/main/default/objects/Lead/fields/Import_List__c.field-meta.xml
<CustomField>
    <fullName>Import_List__c</fullName>
    <label>Import List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FH Master List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>