force-app/main/default/objects/Lead/fields/Import_List_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_List_ID__c</fullName>
    <description>Refers to the ID of the lead on the source import list</description>
    <inlineHelpText>Refers to the ID of the lead on the source import list</inlineHelpText>
    <label>Import List ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>