force-app/main/default/objects/Lead/fields/Initialized_In_Mixpanel__c.field-meta.xml
<CustomField>
    <fullName>Initialized_In_Mixpanel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this lead has already been initialized in Mixpanel</description>
    <inlineHelpText>If true, this lead has already been initialized in Mixpanel</inlineHelpText>
    <label>Initialized In Mixpanel</label>
    <type>Checkbox</type>
</CustomField>