force-app/main/default/objects/Lead/fields/Last_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Last_Outreach__c</fullName>
    <description>Date when the lead was last reached out to.</description>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Outreach</label>
    <type>Date</type>
</CustomField>