force-app/main/default/objects/Lead/fields/Last_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Update__c</fullName>
    <description>Tracks the date of the latest status update to use with mixpanel events</description>
    <inlineHelpText>Tracks the date of the latest status update to use with mixpanel events</inlineHelpText>
    <label>Last Status Update</label>
    <type>Date</type>
</CustomField>