force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>For reporting and analysis of why leads are marked as Lost</description>
    <inlineHelpText>Why was the lead marked as Lost?</inlineHelpText>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lost_Reason</valueSetName>
    </valueSet>
</CustomField>