force-app/main/default/objects/Lead/fields/Mixpanel_Distinct_ID__c.field-meta.xml
<CustomField>
    <fullName>Mixpanel_Distinct_ID__c</fullName>
    <description>Distinct ID provided by Mixpanel. If the lead email does not already exist in Mixpanel, Salesforce generates this Distinct ID.</description>
    <externalId>true</externalId>
    <label>Mixpanel Distinct ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>