force-app/main/default/objects/Lead/fields/Out_Turn__c.field-meta.xml
<CustomField>
    <fullName>Out_Turn__c</fullName>
    <label>Out Turn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Med</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Tried/Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>