force-app/main/default/objects/Lead/fields/Owner_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id_Text__c</fullName>
    <formula>OwnerId</formula>
    <label>Owner Id Text</label>
    <type>Text</type>
</CustomField>