force-app/main/default/objects/Lead/fields/Send_to_Mixpanel__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Mixpanel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, events will be sent to Mixpanel for this lead. Explicitly set this to false if part of a large lead import.</description>
    <label>Send to Mixpanel</label>
    <type>Checkbox</type>
</CustomField>