force-app/main/default/objects/Lead/fields/Viator_Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Viator_Supplier_Code__c</fullName>
    <label>Viator Supplier Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>