force-app/main/default/objects/Lead/fields/Viator_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Viator_Website_Link__c</fullName>
    <label>Viator Website Link</label>
    <type>Url</type>
</CustomField>